--- a/tests/test_windowing_function/.project
+++ b/tests/test_windowing_function/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AN00217_app_high_resolution_delay_example</name>
+	<name>test_windowing_function</name>
 	<comment></comment>
 	<projects>
 	</projects>
