--- a/examples/AN00218_app_hires_DAS_fixed/.cproject
+++ b/examples/AN00218_app_hires_DAS_fixed/.cproject
@@ -957,7 +957,7 @@
 		</cconfiguration>
 	</storageModule>
 	<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-		<project id="app_hires_DAS_fixed.null.1528617177" name="app_hires_DAS_fixed"/>
+		<project id="AN00218_app_hires_DAS_fixed.null.1528617177" name="AN00218_app_hires_DAS_fixed"/>
 	</storageModule>
 	<storageModule moduleId="scannerConfiguration">
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
