--- a/examples/AN00218_app_hires_DAS_fixed/.project
+++ b/examples/AN00218_app_hires_DAS_fixed/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>app_hires_DAS_fixed</name>
+	<name>AN00218_app_hires_DAS_fixed</name>
 	<comment></comment>
 	<projects>
 	</projects>
