--- a/examples/AN00219_app_lores_DAS_fixed/.cproject
+++ b/examples/AN00219_app_lores_DAS_fixed/.cproject
@@ -966,7 +966,7 @@
 		</cconfiguration>
 	</storageModule>
 	<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-		<project id="example_lores_DAS_fixed.null.1960128366" name="example_lores_DAS_fixed"/>
+		<project id="AN00219_app_lores_DAS_fixed.null.1960128366" name="AN00219_app_lores_DAS_fixed"/>
 	</storageModule>
 	<storageModule moduleId="scannerConfiguration">
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
