--- a/examples/AN00219_app_lores_DAS_fixed/.project
+++ b/examples/AN00219_app_lores_DAS_fixed/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>app_lores_DAS_fixed</name>
+	<name>AN00219_app_lores_DAS_fixed</name>
 	<comment></comment>
 	<projects>
 	</projects>
